[project]
name = "probability-matrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "navteniev-nyu", email = "na414@nyu.edu" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
